# Erlang-B-Calculator

./: README-PORTUGUESE.txt  README.MD
source/command line version/: CMakeLists.txt  README.txt  main.cpp  resources.rc
source/gui version/: CMakeLists.txt  README.txt  main.cpp
source/gui version/lib/: fltk.lib
